--- a/src/components/views/patients/PatientsDashboard.css
+++ b/src/components/views/patients/PatientsDashboard.css
@@ -82,3 +82,65 @@
     font-weight: bold;
 }
 
+.square_top_bmiwl {
+    /* border: 1px solid #ddd; */
+    width: 420px;
+    height: 200px;
+}
+
+.square_left_bottom_bmiwl {
+    border: 1px solid #ddd;
+    width: 210px;
+    height: 100px;
+    display: inline-block;
+}
+
+.square_right_bottom_bmiwl {
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    width: 210px;
+    height: 100px;
+    display: inline-block;
+}
+
+.bmiw_value{
+    padding-top: 20px;
+    color: #1f77b4;
+    text-align: center;
+    font-size: 60px;
+}
+
+.bmiw_value_2{
+    color: #999;
+    text-align: center;
+    font-size: 30px;
+}
+
+.bmiw_title_2{
+    color: #999;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.bmiw_value_3{
+    color: #f5ac0e;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.bmiw_value_4{
+    color: #02997d;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.bmiw_value_5{
+    color: #999;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
