--- a/src/components/Charts/Tree.css
+++ b/src/components/Charts/Tree.css
@@ -1,17 +1,10 @@
-/* div.custom-container {
-
-} */
-
 svg.custom .node circle {
 	fill: #F3F3FF;
-	stroke: #2593B8;
-	stroke-width: 2px;
 }
 
 svg.custom .node text {
-	font-size: 16px;
-	/* background-color: #444; */
-	fill: black;
+	font-size: 14px;
+	fill: #222;
 }
 
 svg.custom .node {
@@ -20,13 +13,12 @@ svg.custom .node {
 
 svg.custom path.link {
 	fill: none;
-	stroke: #2593B8;
+	stroke: #999;
 	stroke-width: 1.5px;
 }
 
 .red-node {
-    font-size: 16px;
-	fill: #9999996b;
-    stroke: #ff9833;
+    font-size: 14px;
+	fill: #02997d;
     cursor: pointer;
 }
