--- a/src/components/views/global/GlobalDashboard.css
+++ b/src/components/views/global/GlobalDashboard.css
@@ -22,11 +22,57 @@
 .global_name{
     color: #555;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .global_value{
     color: #555;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
+}
+
+.gest_square_left {
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    width: 59px;
+    height: 50px;
+    display: inline-block;
+}
+
+.gest_square_right {
+    border: 1px solid #ddd;
+    width: 59px;
+    height: 50px;
+    display: inline-block;
+}
+
+.gest_name{
+    color: #555;
+    text-align: center;
+    font-size: 14px;
+}
+
+.gest_value{
+    color: #444;
+    text-align: center;
+    font-size: 14px;
+}
+
+.gest_name_dr{
+    color: #6a67ac;
+    text-align: center;
+    font-size: 14px;
+}
+
+.gest_name_unit{
+    color: #6fac86;
+    text-align: center;
+    font-size: 14px;
+}
+
+.gest_name_all{
+    color: #d86b0c;
+    text-align: center;
+    font-size: 14px;
 }
