--- a/src/components/views/histologie/TraitementAdjuvantDashboard.css
+++ b/src/components/views/histologie/TraitementAdjuvantDashboard.css
@@ -1,10 +1,10 @@
 .chemoRTC_top {
     width: 350px;
-    height: 200px;
+    height: 290px;
 }
 
 .chemoRTC_value{
-    padding-top: 50px;
+    padding-top: 100px;
     color: #1f77b4;
     text-align: center;
     font-size: 60px;
@@ -57,7 +57,7 @@
 }
 
 .chemoRTCBlood_value_p{
-    padding-top: 50px;
+    padding-top: 100px;
     color: #FF8042;
     text-align: center;
     font-size: 60px;
@@ -68,4 +68,63 @@
     text-align: center;
     font-size: 18px;
     font-weight: bold;
+}
+
+.chartTitle{
+    /* height: 30px; */
+}
+
+.chemoRTC_square_left_a_dr{
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+}
+
+.chemoRTC_square_left_dr{
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    width: 80px;
+    height: 40px;
+    display: inline-block;
+    
+}
+
+.chemoRTC_square_right_a_dr{
+    border: 1px solid #ddd;
+    width: 60px;
+    height: 40px;
+    display: inline-block;
+    
+}
+
+.chemoRTC_name_dr{
+    color: #999;
+    text-align: center;
+    font-size: 14px;
+}
+
+.lt6_value_dr{
+    color: #00C49F;
+    text-align: center;
+    font-size: 14px;
+}
+
+.gt6_value_dr{
+    color: #FFBB28;
+    text-align: center;
+    font-size: 14px;
+}
+
+.chemoRTC_value_dr{
+    color: #999;
+    text-align: center;
+    font-size: 14px;
+}
+
+.chartTitle{
+    height: 60px;
 }
